--- a/nginx.conf
+++ b/nginx.conf
@@ -1,13 +1,15 @@
 server {
     listen 80;
+    server_name _;
 
     root /usr/share/nginx/html;
-    index index.html index.htm;
+    index index.html;
 
-    # For React/Vite single-page application routing
     location / {
-        try_files $uri $uri/ /index.html;
+        try_files $uri /index.html;
     }
 
-    error_page 404 /index.html;
+    location /assets/ {
+        try_files $uri =404;
+    }
 }
